fix responsive issues on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 #categoryapp h1 {
-  font-size: 36px;
+  font-size: 2.5em;
   font-weight: bold;
   text-align: center;
   padding: 0 0 10px 0;
@@ -81,6 +81,16 @@ input[type="number"] {
   display: none;
 }
 
+.budget-label{
+  display: block;
+  width: 40%;
+  margin: 30px auto;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #111;
+  text-align: center;
+  font-size: 2em;
+}
+
 .budget-view{
   margin-bottom: 20px;
 }
@@ -91,7 +101,7 @@ input[type="number"] {
 
 .budget-view.editing .budget-edit {
   display: block;
-  width: 444px;
+  width: 100%;
   padding: 13px 15px 14px 20px;
   margin: 0;
 }
@@ -165,7 +175,7 @@ input[type="number"] {
 
 #category-list li.editing .category-edit {
   display: block;
-  width: 444px;
+  width: 85%;
   padding: 13px 15px 14px 20px;
   margin: 0;
 }
@@ -262,6 +272,16 @@ input[type="number"] {
   position: absolute;
 }
 
+#expense-list .expense-label:before{
+  position: relative;
+  content: '.  ';
+  font-size: 2em;
+}
+
+#expense-list .expense-label{
+  top: 10px;
+}
+
 #expense-list .expense-view.editing .expense-label{
   display: none;
 }
@@ -272,7 +292,7 @@ input[type="number"] {
 
 #expense-list .expense-view.editing input[type="text"]{
   display: inline-block;
-  width: 320px;
+  width: 60%;
   position: absolute;
   left: 0;
   top:0;
@@ -295,7 +315,7 @@ input[type="number"] {
 
 #expense-list .cost-view.editing input[type="number"]{
   display: inline-block;
-  width: 70px;
+  width: 20%;
   position: absolute;
   right: 45px;
   top:0;
